=== Opus Primus changelog.txt ===
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.0.1 ==
* Center top level menu items only - better aesthetics with short page titles

= Current Internet Browsers Reviewed =
* Apple Safari
* Firefox
* Google Chrome
* Internet Explorer
* Opera

/** ------------------------------------------------------------------------- */

== Version 1.0 ==
* Initial release - February 2013

/** ------------------------------------------------------------------------- */

== Copyright ==
Copyright (c) 2012-2013, Opus Primus

This file is part of Opus Primus.

Opus Primus is free software; you can redistribute it and/or modify it under the
terms of the GNU General Public License version 2, as published by the Free
Software Foundation.

You may NOT assume that you can use any other version of the GPL.

This program is distributed in the hope that it will be useful, but WITHOUT ANY
WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with
this program; if not, write to:

    Free Software Foundation, Inc.
    51 Franklin St, Fifth Floor
    Boston, MA  02110-1301  USA

The license for this software can also likely be found here:
http://www.gnu.org/licenses/gpl-2.0.html